[package]
name = "rusty_raft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"]}
bincode = "1.3.3"
serde = { version = "1.0.132", features = ["derive"]}
