[package]
name = "rusty_raft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"]}
rand = "0.8.4"
bytes = "1.1.0"
tokio-util = { version = "0.6.9", features = ["full"]}
futures = "0.3.19"
serde = { version = "1.0.133", features = ["derive"]}
